fixed main section being aligned to be with footer

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -23,7 +23,13 @@ body {
   flex-direction: column;
   min-height: 100vh;
 
-  justify-content: space-between;
+  #app {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    flex: 1;
+  }
 
   main {
     margin: 5vh 10vw 5vh 10vw;
